[tool.poetry]
name = "e5 = app veille moni + debug"
version = "0.1.0"
description = ""
authors = ["Malganiak <malganiak@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.41.1"
onnxruntime = "^1.20.1"
transformers = "^4.47.1"
scikit-learn = "^1.6.0"
sentencepiece = "^0.2.0"
torch = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
